...
  mounted() {
    this.audioContainer = document.getElementById("audioContainer");
  },
  data() {
    return {
      usernamePlaceholder: "Login",
      passwordPlaceholder: "Password",
      form: {
        username: "",
        password: "",
      },
    };
  },
...

        <input-password
          :labelText="passwordPlaceholder"
          @emittedInput="onInputPassword" />

        <button-primary
          text="SIGN IN"
          @click.prevent="login"
          type="submit" />
        <buttonSecondary
          text="FORGOTTEN PASSWORD?"
          @click.prevent="forgottenPassword" />
      </form>
...
