...
    protected abstract void sendEmail(E event) throws MailjetSocketTimeoutException, MailjetException;
    protected void setSenderEmail(String toEmail, String subject, String text, String customerId) throws MailjetSocketTimeoutException, MailjetException{
        request = new MailjetRequest(Emailv31.resource)
                .property(Emailv31.MESSAGES, new JSONArray()
                        .put(new JSONObject()
                                .put(Emailv31.Message.FROM, new JSONObject()
                                        .put("Email", senderEmail)
                                        .put("Name", "Do not reply"))
                                .put(Emailv31.Message.TO, new JSONArray()
                                        .put(new JSONObject()
                                                .put("Email", toEmail)
                                                .put("Name", "Do not reply")))
                                .put(Emailv31.Message.SUBJECT, subject)
...
